style.css
/* Universal Styles */
body {
    margin: 0;
    font-family: "Helvetica", sans-serif;
    font-size: 22px;
    color: seashell;
    background-color: black;
    opacity: 0.9;
    text-align: center;
}

a {
    text-decoration: underline;
    color: seashell;
}


/* Header Section */
header {
    height: 69px;
    width: 100%;
    border-bottom: 1px solid seashell; 
    display: flex;
    position: fixed;
    align-items: center;
    z-index: 1;
    background-color: black;
}

.logo {
    height: 50px;
    padding-left: 10px;
    display: flex;
}

nav {
    text-align: right;
    flex-grow: 1;
}

nav span {
    display: inline-block;
    padding: 20px 10px;
}


/* Main Section */
.content {
    padding-top: 69px;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}


/* Mission Content */
.mission {
    width: 1200px;
    height: 700px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url(./resources/img-mission-background.jpg);
}

.mission .title {
    background-color: black;
    width: 1200px;
}

.title h2, h4 {
    margin: 0;
    padding: 10px;
}


/* Tea of The Month Content */
.featured-tea {
    margin-top: 30px;
    width: 1000px;
}

.image-content {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.image {
    padding: 15px;
}

.image img {
    width: 300px;
    height: 200px;
    display: block;
    padding-bottom: 10px;
}


/* Locations Content */
.locations {
    width: 1200px;
    height: 500px;
    margin-top: 30px;
    justify-content: center;
    padding-top: 85px;
    background-image: url(./resources/img-locations-background.jpg);
}

.locations-content {
    padding-top: 15px;
    display: flex;
    justify-content: center;
}

.address {
    width: 300px;
    background-color: black;
    margin: 20px;
    opacity: 1;
}


/* Footer Section */
footer {
    margin-top: 30px;
}

.info {
    height: 200px;
}

.copyright{
    text-align: left;
    padding-left: 20px;
}

